--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.col-centered {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.rowC {
+  display: flex;
+  flex-direction: row;
+}
