--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+row {
+  width: auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,14 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.col-centered {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.rowC {
-  display: flex;
-  flex-direction: row;
 }
